Salesforce/main/default/objects/Produccion_Basica__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoria</label>
    <referenceTo>Categoria__c</referenceTo>
    <relationshipLabel>Produccion Basicas</relationshipLabel>
    <relationshipName>Produccion_Basicas</relationshipName>
    <type>Lookup</type>
</CustomField>