Salesforce/main/default/objects/Produccion_Basica__c/fields/Com_1_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Com_1_Pedido__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Com. 1-Pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>