Salesforce/main/default/objects/Produccion_Basica__c/fields/Com_2_Pedido_Complementar__c.field-meta.xml
<CustomField>
    <fullName>Com_2_Pedido_Complementar__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Com. 2-Pedido Complementar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>