Salesforce/main/default/objects/Produccion_Basica__c/fields/Com_4_Cancelamiento__c.field-meta.xml
<CustomField>
    <fullName>Com_4_Cancelamiento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Com. 4-Cancelamiento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>