Salesforce/main/default/objects/Produccion_Basica__c/fields/Com_6_Adm_Exedente__c.field-meta.xml
<CustomField>
    <fullName>Com_6_Adm_Exedente__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Com. 6-Adm. Exedente</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>