Salesforce/main/default/objects/Produccion_Basica__c/fields/Epoca_de_Plantio__c.field-meta.xml
<CustomField>
    <fullName>Epoca_de_Plantio__c</fullName>
    <label>Epoca de Plantio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verão</fullName>
                <default>true</default>
                <label>Verão</label>
            </value>
            <value>
                <fullName>Inverno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>