Salesforce/main/default/objects/Produccion_Basica__c/fields/Local_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Local_de_Entrega__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local de Entrega</label>
    <referenceTo>Local__c</referenceTo>
    <relationshipLabel>Produccion Basicas</relationshipLabel>
    <relationshipName>Produccion_Basicas</relationshipName>
    <type>Lookup</type>
</CustomField>