Salesforce/main/default/objects/Produccion_Basica__c/fields/Local_Origem__c.field-meta.xml
<CustomField>
    <fullName>Local_Origem__c</fullName>
    <label>Local Origem</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fazenda Butiá</fullName>
            </value>
            <value>
                <fullName>Semente Agrorosso</fullName>
            </value>
            <value>
                <fullName>Sementes Talismã</fullName>
            </value>
            <value>
                <fullName>Sergio Roos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>