Salesforce/main/default/objects/Produccion_Basica__c/fields/Prod_2_Plantio__c.field-meta.xml
<CustomField>
    <fullName>Prod_2_Plantio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prod. 2-Plantio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>