Salesforce/main/default/objects/Produccion_Basica__c/fields/Prod_4_Colheita__c.field-meta.xml
<CustomField>
    <fullName>Prod_4_Colheita__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prod. 4-Colheita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>