Salesforce/main/default/objects/Produccion_Basica__c/fields/Prod_5_Beneficiamento__c.field-meta.xml
<CustomField>
    <fullName>Prod_5_Beneficiamento__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prod. 5-Beneficiamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>