Salesforce/main/default/objects/Produccion_Basica__c/fields/Prod_7_Descarte__c.field-meta.xml
<CustomField>
    <fullName>Prod_7_Descarte__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prod. 7-Descarte</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>