Salesforce/main/default/objects/Produccion_Basica__c/fields/Prod_9_Certificacion__c.field-meta.xml
<CustomField>
    <fullName>Prod_9_Certificacion__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Prod. 9-Certificação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>