Salesforce/main/default/objects/Produccion_Basica__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produccion Basicas</relationshipLabel>
    <relationshipName>Produccion_Basicas</relationshipName>
    <type>Lookup</type>
</CustomField>