Salesforce/main/default/objects/Produccion_Basica__c/fields/Tipo_de_Necesidad__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Necesidad__c</fullName>
    <label>Tipo de Necesidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desenvolvimento Manejo</fullName>
            </value>
            <value>
                <fullName>Desenvolvimento Rede</fullName>
            </value>
            <value>
                <fullName>Difusão Comercial</fullName>
            </value>
            <value>
                <fullName>Difusão E.B.E. (Eventos / Bera de estrada)</fullName>
            </value>
            <value>
                <fullName>Ensayo Rede</fullName>
            </value>
            <value>
                <fullName>Ensayo Manejo</fullName>
            </value>
            <value>
                <fullName>Multiplicação</fullName>
            </value>
            <value>
                <fullName>Difusão para Multiplicador ou Revenda (40kg)</fullName>
            </value>
            <value>
                <fullName>Difusão GDM Comercial</fullName>
            </value>
            <value>
                <fullName>Difusão GDM – DC /ST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>